# iam-service

./: .env  Cargo.toml  LICENSE  LICENSE-MIT  README.md
migrations/: 00003_create_outbox.cql  20260412_create_email_lookup.cql  20260412_create_outbox.cql  20260412_create_users.cql
src/: main.rs
src/application/: mod.rs
src/application/events/: event.rs  metadata.rs  mod.rs  password_reset_completed_event.rs  password_reset_requested_event.rs  user_activated_event.rs  user_registered_event.rs
src/application/helpers/: token.rs
src/application/inputs/: authentication_input.rs  confirm_email_input.rs  forgot_password_input.rs  mod.rs  register_user_input.rs  reset_password_input.rs
src/application/use_cases/: authentication_use_case.rs  confirm_email_use_case.rs  forgot_password_use_case.rs  mod.rs  register_user_use_case.rs  reset_password_use_case.rs
src/domain/: mod.rs
src/domain/enums/: audience.rs  mod.rs  scope.rs
src/domain/events/: domain_event.rs  event.rs  mod.rs  password_reset_completed_event.rs  password_reset_requested_event.rs  user_activated_event.rs  user_registered_event.rs
src/domain/models/: mod.rs  user.rs  user_by_email.rs
src/domain/object_values/: email.rs  id.rs  mod.rs  password.rs  status.rs
src/domain/repositories/: user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/message/: event_publisher.rs  event_worker.rs  mod.rs  rabbitmq_publisher.rs
src/infrastructure/repository/: mod.rs  outbox.rs  scylla_connection.rs  scylla_outbox_repo.rs  scylla_service.rs  scylla_user_repo.rs
(+21 files in other folders)
