[package]
name = "iam-service"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
lazy_static = "1.5.0"
nanoid = "0.4.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
uuid = { version = "1.23.0", features = ["serde", "v7"] }
